<resources>
    <string name="app_name">SaveMoneyHelper</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Palavra-passe</string>
    <string name="hint_name">Nome</string>
    <string name="login">Login</string>
    <string name="register">Registar-se</string>
    <string name="btn_link_to_register">Não é um membro? regista-te já</string>
    <string name="btn_link_to_login">Already registered! Login Me.</string>
    <string name="welcome">Bem-vindo!</string>
    <string name="logout">logout</string>
    <string name="change_password">Mudar palavra-passe</string>
    <string name="old_password"> Antiga palavra-passe</string>
    <string name="new_password">Nova palavra-passe</string>
    <string name="question1">Qual é o seu rendimento mensal?</string>
    <string name="question2">Principal objetivo financeiro</string>
    <string name="hint_question1">Ex: 500</string>
    <string name="get_started_btn">Get Started</string>

    <string name="intro_description">Intro description example</string>
    <string name="intro_title">Intro example</string>
    <string name="confirm_password">confirmar palavra-passe</string>

    <!-- Fragment's strings -->
    <string name="hello_blank_fragment">Fragmento branco</string>
    <string name="saldo_title">saldo atual</string>
    <string name="valor">Valor</string>
    <string name="valorAnual">Valor anual</string>
    <string name="durante">Durante</string>
    <string name="skip">pular</string>

    <string name="select_type">Escolher tipo:</string>
    <string name="select_category">Selecionar categoria:</string>
    <string name="amount">Valor</string>
    <string name="select_day">Selecionar dia:</string>
    <string name="select_time">Selecionar hora:</string>
    <string name="add">Adicionar</string>
    <string name="top10">Top 10 despesas</string>
    <string name="settings">Definições</string>
    <string name="transactions">Transações</string>
    <string name="addWallet">Adicionar transação</string>
    <string name="addBudget">Adicionar budget</string>
    <string name="budget">Budget</string>
    <string name="simular">simular</string>
    <string name="resetar">resetar</string>
    <string name="despesas">Despesas</string>
    <string name="ganhos">Ganhos</string>
    <string name="gastosEssenciais">Necessidades</string>
    <string name="gastosExtras">Extras</string>

    <string-array name="menuSimulacoes">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
</resources>
