<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/outcomeFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".wallet.AddWallet">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/root_layout2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            >


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarAddWallet"

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="?attr/colorPrimary"
                android:elevation="0dp"
                app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_scrollFlags="scroll|enterAlways|snap"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
                app:titleTextColor="@color/white">

                <ImageView
                    android:id="@+id/icon_img"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="8dp"
                    android:backgroundTint="@color/colorPrimary"
                    android:padding="7dp"
                    android:src="@drawable/icon_money_wallet"
                    android:tint="#FFFFFF"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.05"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintVertical_bias="0.58000004" />

                <TextView
                    android:id="@+id/title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-medium"
                    android:text="@string/addWallet"
                    android:textColor="@color/white"
                    android:textSize="20sp"
                    app:layout_constraintBottom_toTopOf="@+id/scrollView2"
                    app:layout_constraintEnd_toEndOf="@id/icon_img"
                    app:layout_constraintStart_toStartOf="@+id/scrollView2"
                    app:layout_constraintTop_toTopOf="@+id/scrollView2"
                    app:layout_constraintVertical_bias="0.45" />

            </androidx.appcompat.widget.Toolbar>

            <ScrollView
                android:id="@+id/scrollView2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                app:layout_constraintBottom_toTopOf="@+id/add_entry_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/toolbarAddWallet"
                app:layout_constraintVertical_bias="0.0">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:paddingTop="8dp"
                        android:text="@string/select_type"
                        android:textColor="@color/black" />

                    <Spinner
                        android:id="@+id/select_type_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="72dp"
                        android:backgroundTint="@android:color/transparent" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="8dp" />

                    <TextView
                        android:id="@+id/textView8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="12dp"
                        android:paddingTop="4dp"
                        android:text="@string/select_category" />

                    <Spinner
                        android:id="@+id/select_category_spinner"
                        android:layout_width="match_parent"
                        android:layout_height="72dp" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginLeft="12dp"
                        android:layout_marginRight="12dp"
                        android:layout_marginBottom="8dp" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/select_name_inputlayout"

                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/hint_name"
                        app:layout_constraintTop_toBottomOf="@+id/sign_out_button">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/select_name_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/select_amount_inputlayout"
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginBottom="16dp"
                        android:hint="@string/amount"
                        app:layout_constraintTop_toBottomOf="@+id/sign_out_button">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/select_amount_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="number"
                            app:errorEnabled="true" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="16dp">

                        <TextView
                            android:id="@+id/textView9"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:paddingLeft="12dp"
                            android:text="@string/select_day"
                            app:layout_constraintBottom_toTopOf="@+id/choose_day_textview"

                            app:layout_constraintStart_toStartOf="@+id/choose_day_textview"
                            app:layout_constraintTop_toTopOf="@+id/choose_day_textview"
                            />

                        <ImageView
                            android:id="@+id/icon_imageview"
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:background="@drawable/icon_background_circle"
                            android:backgroundTint="@color/grey"
                            android:padding="7dp"
                            android:src="@drawable/ic_calendar"
                            android:tint="#FFFFFF"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.05"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.7" />

                        <TextView
                            android:id="@+id/choose_day_textview"
                            style="@style/Widget.AppCompat.Spinner"
                            android:layout_width="match_parent"
                            android:layout_height="50dp"
                            android:layout_alignParentStart="true"
                            android:layout_alignParentBottom="true"
                            android:gravity="center"
                            android:paddingLeft="8dp"
                            android:text="aha"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/textView9" />

                        <Switch
                            android:id="@+id/type"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"

                            android:layout_marginBottom="24dp"
                            android:backgroundTint="@color/colorPrimary"
                            android:buttonTint="#00BCD4"
                            android:lineSpacingExtra="12sp"
                            android:switchTextAppearance="@style/TextAppearance.AppCompat.Display1"
                            android:text="Necessidade"
                            android:textAlignment="textStart"
                            android:textSize="14sp"
                            app:layout_constraintTop_toBottomOf="@+id/editTextValor"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintHorizontal_bias="0.94"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent"
                            app:layout_constraintVertical_bias="0.25"
                            tools:checked="false" />
                        <View
                            android:layout_width="0dp"
                            android:layout_height="1dp"
                            android:layout_marginStart="8dp"
                            android:layout_marginEnd="8dp"

                            app:layout_constraintEnd_toEndOf="@+id/choose_day_textview"
                            app:layout_constraintHorizontal_bias="1.0"
                            app:layout_constraintStart_toStartOf="@+id/choose_day_textview"
                            app:layout_constraintTop_toBottomOf="@+id/choose_day_textview" />


                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>
            </ScrollView>

            <Button

                android:id="@+id/add_entry_button"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="300dp"
                android:layout_height="52dp"
                android:layout_centerHorizontal="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                android:backgroundTint="@color/colorPrimary"
                android:paddingLeft="8dp"
                android:paddingRight="8dp"
                android:text="@string/add"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>